# cross-review

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  hotl-workflow-cline-mcp-sessions.md  hotl-workflow-session-locking.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  testpypi.yml
commands/: cr.md
docs/: releasing.md
docs/plans/: 2026-03-11-cline-mcp-session-design.md
scripts/: cr-cline-wrapper.sh  install-cline-mcp.sh
skills/: cross-review.md
src/cross_review/: __init__.py  _file_context.py  _request_cache.py  auth.py  budget.py  cli.py  config.py  mcp_server.py  oca_discovery.py  orchestrator.py  prompts.py  reconciliation.py  rendering.py  retry.py  router.py  schemas.py  sessions.py  tracing.py  validation.py
src/cross_review/providers/: __init__.py  base.py  claude.py  gemini.py  openai_adapter.py  openai_compatible.py  sampling.py
tests/: conftest.py  test_auth.py  test_budget.py  test_cli.py  test_config.py  test_dedup_file_integration.py  test_e2e_host_managed.py  test_e2e_ollama.py  test_file_context.py  test_integration.py  test_mcp_server.py  test_oca_discovery.py  test_oca_mcp_integration.py  test_openai_compatible.py  test_orchestrator.py  test_providers.py  test_reconciliation.py  test_request_cache.py  test_router.py  test_sampling_adapter.py  test_schemas.py  test_session_integration.py  test_session_locking.py  test_sessions.py  test_shell_wrapper.py  test_validation.py
