[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cross-review"
version = "0.1.0"
description = "Multi-model structured technical review engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "yimwoo" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.8",
]

[project.urls]
Homepage = "https://github.com/yimwoo/cross-review"
Repository = "https://github.com/yimwoo/cross-review"
Issues = "https://github.com/yimwoo/cross-review/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pylint>=3.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "flake8>=7.0",
    "black==25.1.0",
    "pre-commit>=3.0",
    "build>=1.2",
    "twine>=5.1",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
cr = "cross_review.cli:main"
cross-review = "cross_review.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cross_review"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.main]
load-plugins = ["pylint.extensions.docparams"]
max-line-length = 99

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring (we'll enforce at function/class level)
    "C0115",  # missing-class-docstring (too noisy for Pydantic models)
    "R0903",  # too-few-public-methods (Pydantic models)
    "R0913",  # too-many-arguments
    "C0301",  # line-too-long (black handles this)
    "W0511",  # fixme
    "E0611",  # no-name-in-module (false positives with pydantic)
    "C0209",  # consider-using-f-string
    "R0801",  # duplicate-code (provider adapters share schema injection pattern)
]

[tool.pylint.format]
max-line-length = 99

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # allow assert in tests
